<resources>
    <string name="app_name">EverSpinner</string>
    <string name="spinner_copybtn_txt">Copy</string>
    <string name="spinner_default_input">This {is|is not} a good UI design!</string>
    <string name="spinner_input_txt_hint">Input text to be spun</string>
    <string name="spinner_output_txt_hint">Press \"Spin\" to autofill this based on input</string>
    <string name="spinner_pastebtn_txt">Paste</string>
    <string name="spinner_spinbtn_txt">Spin</string>
    <string name="spinner_loadbtn_txt">Load</string>
    <string name="spinner_savebtn_txt">Save</string>

    <string name="spinner_error_parse_1">Error: An selection is closed \'}\' before it is opened \'{\'!</string>
    <string name="spinner_error_parse_2">Error: An selection is not closed with \'}\'!</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bnav_spinner">Spinner</string>
    <string name="bnav_saved">Saved</string>
    <string name="bnav_settings">Settings</string>
    <string name="saved_set_as_default_text">Set as default input text</string>
    <string name="saved_date_created">Date Created:</string>
    <string name="enter_label_title">Enter label/title</string>

    <string name="saved_folder_name">saved_text/</string>
    <string name="edit_saved_text_cd">Edit saved text</string>
    <string name="delete_saved_text_cd">Delete saved text</string>
    <string name="bnav_synonyms">Synonyms</string>
    <string name="synonym_score_hint">Synonym score</string>
    <string name="score_input_label">Score:</string>
    <string name="spinner_cachebtn_txt">Cache</string>
    <string name="btn_add_synonym_description">Add a new synonym</string>
    <string name="synonym_cache_list_label">Synonym Cache</string>
    <string name="btn_add_baseword_description">Add a new word</string>
    <string name="new_syn_word_input_label">Word:</string>
    <string name="btn_delete_baseword_desc">Delete baseword from cache</string>
    <string name="btn_delete_synonym_desc">Delete synonym</string>
    <string name="btn_edit_synonym_desc">Edit synonym score</string>
    <string name="btn_save_cache_desc">Save synonym cache changes</string>
    <string name="no_saved_text_list_notice">There are no saved text files.</string>
    <string name="saved_item_date_modified_label">Date modified:</string>
</resources>