<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner_container"
    tools:context=".Spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_spinbutton_cont"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/btn_spinner_paste"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/spinner_pastebtn_txt" />

        <Button
            android:id="@+id/btn_spinner_spin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/spinner_spinbtn_txt" />

        <Button
            android:id="@+id/btn_spinner_copy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/spinner_copybtn_txt" />
        <Button
            android:id="@+id/btn_spinner_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/spinner_savebtn_txt" />
    </LinearLayout>

    <View
        android:id="@+id/button_input_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/ll_spinbutton_cont" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        android:layout_below="@id/button_input_separator"
        android:layout_alignParentBottom="true">
        <ScrollView
            android:id="@+id/scroll_input_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fillViewport="true">

            <EditText
                android:id="@+id/txt_spinner_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:hint="@string/spinner_input_txt_hint"
                android:inputType="textMultiLine"
                android:text="@string/spinner_default_input" />
        </ScrollView>

        <View
            android:id="@+id/spin_input_output_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent" />

        <ScrollView
            android:id="@+id/scroll_output_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fillViewport="true">

            <EditText
                android:id="@+id/txt_spinner_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:gravity="top"
                android:hint="@string/spinner_output_txt_hint"
                android:inputType="textMultiLine" />
        </ScrollView>
    </LinearLayout>



</RelativeLayout>



